# rxs-toolkit

./: .clang-format  .gitattributes  .gitignore  BSplineLength.cpp  BSplineLength.h  CMakeLists.txt  CMakePresets.json  ColorModel.cpp  ColorModel.h  CzxRansac.cpp  CzxRansac.h  Hole.cpp  Hole.h  Hole.hpp  LICENSE  LaptopLine.cpp  LaptopLine.h  NurbsCommon.hpp  NurbsFit.cpp  NurbsFit.h  NurbsSolve.cpp  NurbsSolve.h  NurbsSurface.cpp  NurbsSurface.h  OMPSurface.cpp  OMPSurface.h  PointGrid.cpp  PointGrid.h  README.md  SECURITY.md  Source.def  conf_surface.czx  czxToolkit.sln  czxToolkit.vcxproj  dllmain-d.cpp  dllmain.cpp  nanoflann.hpp  pch.h  photometricStero.cpp  photometricStero.cu  (+6 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-windows.yml  ci.yml  codeql.yml  encoding-check.yml  release.yml
czxDependence/: cuda.props  czxTool.cpp  czxTool.h  pcl_release.props
include/rxs/: rxs_api.h  rxs_export.h
src/: rxs_api.cpp
